# namaehamadanai

./: CMakeLists.txt  README.md  color_detection.cpp
src/: plate_pick_and_move.cpp
